# geostat-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench_gstat.R  bench_rust.py
crates/geostat-cli/: Cargo.toml
crates/geostat-cli/fuzz/: Cargo.toml
crates/geostat-cli/fuzz/fuzz_targets/: gpkg_decode_png.rs  gpkg_decode_point.rs
crates/geostat-cli/src/: gpkg.rs  io_utils.rs  lib.rs  main.rs
crates/geostat-cli/tests/: cli.rs
crates/geostat-core/: Cargo.toml
crates/geostat-core/benches/: engine.rs
crates/geostat-core/examples/: plan_bench.rs  vecchia_grouping_bench.rs  vecchia_scaling.rs
crates/geostat-core/fuzz/: Cargo.toml
crates/geostat-core/fuzz/fuzz_targets/: model_kind_parse.rs  variogram_model_json.rs
crates/geostat-core/src/: cokriging.rs  collocated.rs  covariance.rs  data.rs  declustering.rs  error.rs  grid.rs  ik.rs  interpolation.rs  kriging.rs  lib.rs  linalg.rs  optim.rs  parallel.rs  regression.rs  rng.rs  search.rs  simulation.rs  sis.rs  tails.rs  tgs.rs  trans.rs  transform.rs  tuning.rs  validation.rs  vecchia.rs
crates/geostat-core/src/tgp/: marginal.rs  mod.rs
crates/geostat-core/src/variogram/: bessel.rs  cross.rs  experimental.rs  fit.rs  map.rs  mod.rs  model.rs
crates/geostat-core/tests/: three_d.rs  transport.rs  workflow.rs
crates/geostat-python/: Cargo.toml  README.md  geostat_rs.pyi  pyproject.toml
crates/geostat-python/src/: lib.rs
crates/geostat-wasm/: Cargo.toml
crates/geostat-wasm/src/: lib.rs
docs/: AUDIT-2026-07-v2.md  AUDIT-2026-07-v3.md  AUDIT-2026-07.md  sota_openalex.py  sota_snapshot.md  wos_sota.html
examples/: hybrid_smelt_rk.py  regression_kriging_meuse.py  relaves_cokriging.py  relaves_multielement.py  relaves_nd_covariates.py  tgpy_rare_earths.py  tgpy_relaves_dulcinea.py
examples/wasm-demo/: index.html
figures/: README.md  figures.R  make_figure_data.py
paper/: geostat-rs.tex  refs.bib
validation/: README.md  compare.py  compare_idw.py  compare_matern.py  compare_v02.py  compare_v03.py  compare_v04.py  compare_v05.py  compare_v07.py  compare_walker.py  gstat_reference.R  idw_gstat.R  matern_gstat.R  power_gstat.R  v02_gstat.R  v03_gstat.R  v04_gstat.R  v05_gstat.R  v07_gstat.R  walker_gstat.R
