[workspace]
resolver = "3"
members = [
    "crates/geostat-core",
    "crates/geostat-cli",
    "crates/geostat-python",
    "crates/geostat-wasm",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Francisco Parra-O."]
repository = "https://github.com/fparrao/geostat-rs"

[workspace.dependencies]
ndarray = "0.16"
rayon = "1.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1.3"

[profile.release]
lto = true
codegen-units = 1
