[package]
name = "geostat-cli"
description = "Command-line interface for the geostat-rs geostatistics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "geostat"
path = "src/main.rs"

[dependencies]
geostat-core = { path = "../geostat-core" }
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
serde_json = { workspace = true }
# Bundled SQLite: GeoPackage I/O without a system GDAL/SQLite dependency,
# keeping the single-binary, no-heavy-deps ethos. Matches SurtGIS's version.
rusqlite = { version = "0.39", features = ["bundled"] }
# Pure-Rust PNG encoder for GeoPackage 2D-gridded-coverage raster tiles.
png = "0.17"
