[package]
name = "geostat-core"
description = "Geostatistics engine: variography, kriging and sequential Gaussian simulation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["geostatistics", "kriging", "variogram", "simulation", "spatial"]
categories = ["science", "mathematics"]
readme = "../../README.md"

[features]
default = ["parallel"]
# Parallel execution via rayon. Disable for single-threaded targets (wasm32).
parallel = ["dep:rayon"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ndarray = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { workspace = true }

[lib]
bench = false

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "engine"
harness = false
