[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "geostat-rs"
dynamic = ["version"]
description = "Geostatistics engine (variography, kriging, co-kriging, sequential simulation) — Python bindings for the geostat-rs Rust core"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["geostatistics", "kriging", "variogram", "simulation", "spatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/franciscoparrao/geostat-rs"
Repository = "https://github.com/franciscoparrao/geostat-rs"
Documentation = "https://github.com/franciscoparrao/geostat-rs#readme"
Changelog = "https://github.com/franciscoparrao/geostat-rs/blob/main/CHANGELOG.md"
Issues = "https://github.com/franciscoparrao/geostat-rs/issues"

[tool.maturin]
module-name = "geostat_rs"
features = ["pyo3/extension-module"]
