[package]
name = "geostat-wasm"
description = "WebAssembly bindings for the geostat-rs geostatistics engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
geostat-core = { path = "../geostat-core", default-features = false }
wasm-bindgen = "0.2"
serde_json = { workspace = true }
