[package]
name = "geostat-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.geostat-core]
path = ".."

[[bin]]
name = "model_kind_parse"
path = "fuzz_targets/model_kind_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "variogram_model_json"
path = "fuzz_targets/variogram_model_json.rs"
test = false
doc = false
bench = false
